--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <title>product-builder</title>
+    <title>Vaiki Product Builder</title>
   </head>
   <body>
     <div id="root"></div>
